--- a/src/global.scss
+++ b/src/global.scss
@@ -9,3 +9,11 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+.text-primary {
+    color: var( --ion-color-primary) !important;
+}
+
+.noticia-source-primary {
+    font-size: 12px;
+    color: lightgrey;
+}
