--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -5,7 +5,7 @@
         </ion-title>
     </ion-toolbar>
 
-    <ion-segment scrollable mode="md" color="primary">
+    <ion-segment scrollable mode="md" color="primary" (ionChange)="cambiarCategoria($event)">
         <ion-segment-button mode="md" [value]="categoria" *ngFor="let categoria of categorias">
             <ion-label text-capitalize>{{categoria}}</ion-label>
         </ion-segment-button>
@@ -13,4 +13,6 @@
 
 </ion-header>
 
-<ion-content color="dark"></ion-content>
+<ion-content color="dark">
+    <app-noticias [noticias]="noticias"></app-noticias>
+</ion-content>
