--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -15,4 +15,10 @@
 
 <ion-content color="dark">
     <app-noticias [noticias]="noticias"></app-noticias>
+
+    <ion-infinite-scroll threshold="25%" (ionInfinite)="loadData($event)">
+        <ion-infinite-scroll-content loadingSpinner="crescent" loadingText="Cargando data...">
+        </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+
 </ion-content>
