Se agrega plugin InAppBrowser

--- a/src/app/components/noticia/noticia.component.html
+++ b/src/app/components/noticia/noticia.component.html
@@ -4,10 +4,10 @@
             <span class="text-primary">{{i+1}}. </span>
             <span class="noticia-source-primary">{{noticia.source.name}}</span>
         </ion-card-subtitle>
-        <ion-card-title>{{noticia.title}}</ion-card-title>
+        <ion-card-title (click)="abrirNoticia()">{{noticia.title}}</ion-card-title>
     </ion-card-header>
 
-    <ion-img *ngIf="noticia.urlToImage" [src]="noticia.urlToImage"></ion-img>
+    <ion-img *ngIf="noticia.urlToImage" [src]="noticia.urlToImage" (click)="abrirNoticia()"></ion-img>
 
     <ion-card-content>
         <p>
