--- a/src/app/components/noticia/noticia.component.html
+++ b/src/app/components/noticia/noticia.component.html
@@ -3,6 +3,14 @@
         <ion-card-subtitle>
             <span class="text-primary">{{i+1}}. </span>
             <span class="noticia-source-primary">{{noticia.source.name}} </span>
+
+
+            <div class="noticia-more">
+                <ion-button fill="clear" (click)="lanzarMenu()">
+                    <ion-icon slot="icon-only" name="more"></ion-icon>
+                </ion-button>
+            </div>
+
         </ion-card-subtitle>
         <ion-card-title (click)="abrirNoticia()">{{noticia.title}}</ion-card-title>
         <small>({{noticia.publishedAt | date:"dd/MM/yyyy"}})</small>
