--- a/src/app/pages/tab3/tab3.page.html
+++ b/src/app/pages/tab3/tab3.page.html
@@ -1,11 +1,18 @@
-<ion-header>
-    <ion-toolbar>
+<ion-header no-border>
+    <ion-toolbar color="dark">
         <ion-title>
-            Tab Three
+            Favoritos
         </ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content color="dark">
-    <app-noticias [noticias]="datalocalService.noticias"></app-noticias>
+
+    <ion-slides [options]="sliderOpts" *ngIf="datalocalService.noticias.length === 0">
+        <ion-slide>
+            <ion-label>No hay favoritos</ion-label>
+        </ion-slide>
+    </ion-slides>
+
+    <app-noticias *ngIf="datalocalService.noticias.length > 0" [noticias]="datalocalService.noticias" [enFavoritos]="true"></app-noticias>
 </ion-content>
