--- a/src/global.scss
+++ b/src/global.scss
@@ -31,3 +31,7 @@
 .ios .action-sheet-icon {
     display: none !important;
 }
+
+.tab-selected {
+    color: var( --ion-color-primary) !important;
+}
